--- a/index (2).html
+++ b/index (2).html
@@ -1,3 +1,9 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travelgeeks | Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <header>
     <h1>Travelgeek</h1>
 </header>
