--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <header>
     <h1>Apni Kaksha</h1>
 </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Apni Kaksha | Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <nav>
     <a href="#">Home</a>
     <a href="#">College Reviews</a>
