--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <header>
-    <h1>Apni Kaksha</h1>
+    <h1>Travelgeek</h1>
 </header>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apni Kaksha | Home</title>
+    <title>Travelgeek | Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <nav>
-    <a href="#">Home</a>
-    <a href="#">College Reviews</a>
-    <a href="#">Courses</a>
-    <a href="#">Study Materials</a>
+    <a href="https://kunalbharadwaj.github.io/kbcoregithub.io/">Home</a>
+    <a href="https://www.vfsglobal.com/en/individuals/index.html">Abroad</a>
+    <a href="https://www.google.com/maps">Google maps</a>
+    <a href="https://www.airbnb.co.in/">Convenience</a>
     <a href="#">Login/SignUp</a>
 </nav>
 <main>
     <section>
-        <h2>Courses</h2>
+        <h2>Destinations in India</h2>
         <video src="video/electrochemistry.mp4" width="33%" poster="img/electrochemistry.jpg" controls></video>
         <video src="video/html.m4v" width="33%" poster="img/webdev.png" controls></video>
         <video src="video/maths.mp4" width="33%" poster="img/maths.jpg" controls></video>
