--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 <main>
     <section>
         <h2>Destinations in India</h2>
-        <video src="video/electrochemistry.mp4" width="33%" poster="img/electrochemistry.jpg" controls></video>
-        <video src="video/html.m4v" width="33%" poster="img/webdev.png" controls></video>
-        <video src="video/maths.mp4" width="33%" poster="img/maths.jpg" controls></video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/NudsuaFDeAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <h2>Ooty</h2>
         <br>
         <br>
         <br>
