--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 <main>
     <section>
         <h2>Destinations in India</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/NudsuaFDeAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="device-width" height="315" src="https://www.youtube.com/embed/NudsuaFDeAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h2>Ooty</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/jHpHt6ZeU_s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <br>
         <br>
         <br>
