--- a/index.html
+++ b/index.html
@@ -20,48 +20,47 @@
         <iframe width="device-width" height="175" src="https://www.youtube.com/embed/NudsuaFDeAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h2>Ooty</h2>
         <iframe width="device-width" height="175" src="https://www.youtube.com/embed/jHpHt6ZeU_s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <br>
-        <br>
-        <br>
-        <video src="video/Electrochemistry Lecture 3.mp4" width="33%" poster="img/electrochemistry l3.jpg" controls></video>
-        <video src="video/cpp.mp4" width="33%" poster="img/cpp.jpg" controls></video>
-        <video src="video/maths2.mp4" width="33%" poster="img/maths2.jpg" controls></video>
-    </section>
-    <section>
-        <h2>College Reviews</h2>
-        <iframe width="33%" height="75%" src="https://www.youtube.com/embed/1VfqlKtVF7U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="33%" height="75%" src="https://www.youtube.com/embed/zGJ5BlbKfLM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="33%" height="75%" src="https://www.youtube.com/embed/j0biLzzJ2XQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </section>
-    <section>
-        <h2>Study Material</h2>
-        <a target="_blank" href="Notes/Surface Chemistry  Complete NCERT.pdf"><img src="Notes/Surface Chemistry  Complete NCERT_pages-to-jpg-0001.jpg" alt="" width="24%" height="60%"></a>
-        <a target="_blank" href="Notes/Solid State New Complete Chapter Notes.pdf"><img src="Notes/Solid State New Complete Chapter Notes-01.jpg" alt="" width="24%" height="60%"></a>
-        <a target="_blank" href="Notes/Electrochemistry  Complete NCERT.pdf"><img src="Notes/Electrochemistry  Complete NCERT-01.jpg" alt="" width="24%" height="60%"></a>
-        <a target="_blank" href="Notes/Coordination Compound 3.pdf"><img src="Notes/Coordination Compound 3-page-001 (1).jpg" alt="" width="24%" height="60%"></a>
-    </section>
-    <section>
-        <h2>
-            Our Founder
-        </h2>
-        <img src="img/aman.jpeg" alt="This is Aman Dhattarwal">
-        <h3>Aman Dhattarwal</h3>
-        <a href="http://www.youtube.com/amandhattarwal" target="_blank" rel="noopener noreferrer">YouTube</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="http://www.linkedin.com/in/dhattarwalaman" target="_blank" rel="noopener noreferrer">LinkedIn</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="http://www.instagram.com/dhattarwalaman" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <h2>Kodaikanal</h2>
+        <iframe width="device-width" height="175" src="https://www.youtube.com/embed/jD3sXRz0CvE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <h2>Kashmir</h2>
+        <hr>
+        <iframe width="device-width" height="175" src="https://www.youtube.com/embed/f6ySc-cSZRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <h2>Uttarakhand</h2>
+        <hr>
+        <iframe width="device-width" height="175" src="https://www.youtube.com/embed/eYsV4exIv8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <h2>Gujarat</h2>
+<br>
+<br>
+<br>
 
-        <h4>Young TEDx speaker and #1 Online JEE Educator | Founder of 5 YouTube Channels with 2.5 million young hustlers. </h4>
-        <h5>I help students across India find their right career path. I have been a guest speaker at 22 Colleges including Top IITs, BITS Pilani, IIIT's, NIT's, SRCC, Jadavpur University etc. I am the #1 Educator of JEE on India's biggest online platform
-            and I believe that everyone has the right to quality education and with the help of my social media platforms, I have helped millions of students find their path to success in the last 5 years. In the next few decades, India will rise
-            as the leader of the world with the maximum young workforce, but for this, we need some good pilots who can take us through this. I help these young hustlers find their true potential so that they can fly us to victory.</h5>
-    </section>
+</section>
+<section>
+<h2>Tourist Attractions Abroad</h2>
+<iframe width="500" height="315" src="https://www.youtube.com/embed/ZV70-WYRNnU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="500" height="315" src="https://www.youtube.com/embed/ff1v0AX3eoY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="500" height="315" src="https://www.youtube.com/embed/_K-Gtb_ywfg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="500" height="315" src="https://www.youtube.com/embed/kH94o7dt9Ok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+</section>
+
+<section>
+<h2>
+    Our Founder
+</h2>
+<img src="WhatsApp Image 2023-08-06 at 23.20.29.jpeg" width="300" height="400" alt="This is Kunal Bharadwaj">
+<h3>Kunal Bharadwaj</h3>
+
+<a href="http://www.instagram.com/kunalbharadwaj09" target="_blank" rel="noopener noreferrer">Instagram</a>
+
+<h4>Young IIITian at IIITDM Jabalpur | Hustling to make something useful out of this life. </h4>
+</section>
 </main>
 
 <footer>
-    <a href="#">FAQ</a>
-    <a href="#">Contact Us</a>
-    <a href="#">Terms of Use</a>
-    <a href="#">Privacy Policy</a>
-    <a href="#">Refund Policy</a>
-    <a href="#">&copy; 2020 | Apni Kaksha</a>
+<a href="#">FAQ</a>
+<a href="#">Contact Us</a>
+<a href="#">Terms of Use</a>
+<a href="#">Privacy Policy</a>
+<a href="#">Refund Policy</a>
+<a href="#">&copy; 2023 | Travelgeek</a>
 </footer>
