--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 </section>
 <section>
 <h2>Tourist Attractions Abroad</h2>
-<iframe width="500" height="315" src="https://www.youtube.com/embed/ZV70-WYRNnU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<iframe width="500" height="315" src="https://www.youtube.com/embed/ff1v0AX3eoY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<iframe width="500" height="315" src="https://www.youtube.com/embed/_K-Gtb_ywfg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<iframe width="500" height="315" src="https://www.youtube.com/embed/kH94o7dt9Ok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="device-width" height="315" src="https://www.youtube.com/embed/ZV70-WYRNnU" title="YouTube video player" frameborder="5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="device-width" height="315" src="https://www.youtube.com/embed/ff1v0AX3eoY" title="YouTube video player" frameborder="5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="device-width" height="315" src="https://www.youtube.com/embed/_K-Gtb_ywfg" title="YouTube video player" frameborder="5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="device-width" height="315" src="https://www.youtube.com/embed/kH94o7dt9Ok" title="YouTube video player" frameborder="5" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </section>
 
