--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <a href="http://www.instagram.com/kunalbharadwaj09" target="_blank" rel="noopener noreferrer">Instagram</a>
 
-<h4>Young IIITian at IIITDM Jabalpur | Hustling to make something useful out of this life. </h4>
+<h4>Young IIITian at IIITDM Jabalpur | Hustling to make something useful out of this life. | (This website is for educational purposes and not for any commercial purpose)</h4>
 </section>
 </main>
 
