--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
+<!-- This is heading of website -->
 <header>
     <h1>Travelgeek</h1>
+   <form method="GET" action="https://www.youtube.com/results">
+        <input type="text" name="q">
+        <input type="submit" value="Search">
+    </form>
 </header>
+<!-- Here css file is linked -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travelgeek | Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- this is navigation tab -->
 <nav>
-    <a href="https://kunalbharadwaj.github.io/kbcoregithub.io/">Home</a>
-    <a href="https://www.vfsglobal.com/en/individuals/index.html">Abroad</a>
-    <a href="https://www.google.com/maps">Google maps</a>
-    <a href="https://www.airbnb.co.in/">Convenience</a>
-    <a href="#">Login/SignUp</a>
+    <a href="https://kunalbharadwaj.github.io/kbcore.github.io/" target="_blank">Home</a>
+    <a href="https://www.vfsglobal.com/en/individuals/index.html" target="_blank">Abroad</a>
+    <a href="https://www.google.com/maps" target="_blank">Google maps</a>
+    <a href="https://www.airbnb.co.in/" target="_blank">Convenience</a>
+    <a href="signup.html">Login/SignUp</a>
 </nav>
+<!-- main body of the website starts from here  -->
 <main>
     <section>
         <h2>Destinations in India</h2>
@@ -42,7 +50,7 @@
 <iframe width="device-width" height="315" src="https://www.youtube.com/embed/kH94o7dt9Ok" title="YouTube video player" frameborder="10" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </section>
-
+<!-- this section is about Founder -->
 <section>
 <h2>
     Our Founder
@@ -52,10 +60,10 @@
 
 <a href="http://www.instagram.com/kunalbharadwaj09" target="_blank" rel="noopener noreferrer">Instagram</a>
 
-<h4>Young IIITian at IIITDM Jabalpur | Hustling to make something useful out of this life. | (This website is for educational purposes and not for any commercial purpose)</h4>
+<h4>Young IIITian at IIITDM Jabalpur | Hustling to make something useful out of this life. </h4>
 </section>
 </main>
-
+<!-- this is <footer></footer> -->
 <footer>
 <a href="#">FAQ</a>
 <a href="#">Contact Us</a>
