--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="https://www.vfsglobal.com/en/individuals/index.html" target="_blank">Abroad</a>
     <a href="https://www.google.com/maps" target="_blank">Google maps</a>
     <a href="https://www.airbnb.co.in/" target="_blank">Convenience</a>
-    <a href="https://github.com/KunalBharadwaj/kbcore.github.io/blob/main/WhatsApp%20Image%202023-09-28%20at%2000.06.22.jpeg">Login/SignUp</a>
+    <a href="signup.html">Login/SignUp</a>
 </nav>
 <!-- main body of the website starts from here  -->
 <main>
