--- a/signup.html
+++ b/signup.html
@@ -6,8 +6,7 @@
     <title>Under construction</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color:green;color: white;text-align:center;font-size: 500%;font-family:cursive;">
-    <br>
-    Sorry!!! This webpage is under construction.
+<body>
+    <img src="WhatsApp Image 2023-09-28 at 00.06.22.jpeg" width="device-width">
 </body>
 </html>
